1. type writer text height & font (33pxadded) fixed in mobile view 2. section 2 horizontal scrolling issue is fixed 3 section slider is corrected as it is there in design

--- a/assets/css/section2-slider.css
+++ b/assets/css/section2-slider.css
@@ -65,11 +65,16 @@
     .s2-progress-item {
         width: 100%;
         display: none;
-        height: 150px;
+        height: inherit;
     }
 
     .s2-progress-item.active {
         display: block;
+    }
+    .s2-slide img {
+        width: 418px;
+            height: 221px;
+            object-fit: contain;
     }
 }
 
